build: pass with no tests on ci for now

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "build": "rm -rf build/ && tsc --declaration && cp src/updateTypescriptFunction.sh build/",
     "semantic-release": "semantic-release",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
