fix: use shelljs instead of bash for running the update

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Lukasz Gandecki <lukasz@xolv.io>",
   "main": "build/typescriptFunction.js",
   "bin": {
-    "update-typescript-function": "build/updateTypescriptFunction.sh"
+    "update-typescript-function": "build/update-typescript-function.js"
   },
   "scripts": {
     "build": "rm -rf build/ && tsc --declaration && cp src/updateTypescriptFunction.sh build/",
