--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "update-typescript-function": "build/update-typescript-function.js"
   },
   "scripts": {
-    "build": "rm -rf build/ && tsc --declaration",
+    "build": "rm -rf build/* && tsc --declaration",
     "semantic-release": "semantic-release",
     "test": "jest --passWithNoTests",
     "type-check": "tsc --noEmit"
