--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "devDependencies": {
     "@aws-cdk/assert": "1.64.1",
     "@aws-cdk/aws-lambda": "1.64.1",
+    "@aws-cdk/aws-logs": "1.64.1",
+    "@aws-cdk/aws-logs-destinations": "1.64.1",
     "@aws-cdk/core": "1.64.1",
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
@@ -59,6 +61,8 @@
   "peerDependencies": {
     "@aws-cdk/assert": "*",
     "@aws-cdk/aws-lambda": "*",
+    "@aws-cdk/aws-logs": "*",
+    "@aws-cdk/aws-logs-destinations": "*",
     "@aws-cdk/core": "*",
     "aws-sdk": "*"
   }
