--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cdk-typescript-tooling",
-  "version": "3.0.0-alpha",
+  "version": "3.0.0-alpha.8",
   "description": "",
   "keywords": [],
   "homepage": "https://github.com/xolvio/cdk-typescript-tooling#readme",
@@ -39,6 +39,7 @@
     "@aws-cdk/aws-apigatewayv2-integrations": "1.75.0",
     "@aws-cdk/aws-dynamodb": "1.75.0",
     "@aws-cdk/aws-lambda": "1.75.0",
+    "@aws-cdk/aws-lambda-event-sources": "1.75.0",
     "@aws-cdk/aws-logs": "1.75.0",
     "@aws-cdk/aws-logs-destinations": "1.75.0",
     "@aws-cdk/core": "1.75.0",
@@ -68,7 +69,9 @@
     "@aws-cdk/assert": "*",
     "@aws-cdk/aws-apigatewayv2": "*",
     "@aws-cdk/aws-apigatewayv2-integrations": "*",
+    "@aws-cdk/aws-dynamodb": "*",
     "@aws-cdk/aws-lambda": "*",
+    "@aws-cdk/aws-lambda-event-sources": "*",
     "@aws-cdk/aws-logs": "*",
     "@aws-cdk/aws-logs-destinations": "*",
     "@aws-cdk/core": "*",
