fix: package name, and force release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "0.0.0-development",
-  "version": "",
+  "name": "cdk-typescript-tooling",
+  "version": "0.0.0-development",
   "description": "",
   "keywords": [],
   "homepage": "https://github.com/xolvio/cdk-typescript-tooling#readme",
